@@ -7,8 +7,9 @@ Changelog
 - Added some fields to Plone SEO control panel tool [fdelia]
 - Added viewlets for script rendering in the <head> and in the portal footer [fdelia]
 - Added validation for the canonical url [fdelia]
-- Personalized view for sitemap.xml.gz generation [fdelia]
 - Added ReallyUserFriendlyTypes vocabulary [fdelia]
+- Added view that allows to calculate content types that should be included in the sitemap.xml.gz [fdelia]
+- Personalized view for sitemap.xml.gz generation [fdelia]
 
 0.1.0 (2011-07-20)
 ------------------
